# cbd-lista2

./: .gitignore  CMakeLists.txt  buildthis.sh  main.cpp
data/: .gitattributes  gh.csv  new.csv
include/: Block.h  Column.h  DataRecord.h  Hash.h  Header.h  Heap.h  Schema.h  Sorted.h
src/: Block.cpp  CMakeLists.txt  Column.cpp  DataRecord.cpp  Hash.cpp  Header.cpp  Heap.cpp  Schema.cpp  Sorted.cpp
